Fixed menu collapser and menu responsive.

--- a/app/styles/components/menu-collapser.scss
+++ b/app/styles/components/menu-collapser.scss
@@ -1,8 +1,12 @@
 .collapsable {
-  display: none;
+  opacity: 0;
+  transition: visibility 200ms ease-out,
+    opacity 200ms ease-out;
+  visibility: hidden;
 
   &.active {
-    display: block;
+    opacity: 1;
+    visibility: visible;
   }
 }
 
